--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,28 @@ body {
 }
 
 /* Write all remaining styles here */
+h1{
+	font-family:'Times New Roman', serif;
+	font-size: 60px;
+	color: rgb(157,171,166);
+	margin: 10px;
+}
+
+h2{
+	color: rgb(119,126,121);
+}
+
+p{
+	color: rgb(101,98,98)
+}
+img {
+	border: 5px solid rgb(202,203,202);
+}
+
+footer p {
+	text-align: right;
+}
+
+#press img:hover {
+	border: 5px solid rgb(116,126,122);
+}
